--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
+    "eslint": "5.13.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-react": "7.12.4",
     "jest": "24.0.0",
     "react-test-renderer": "16.8.1",
     "webpack": "4.29.0",
